[package]
name = "resvg"
version = "2.17.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "skia"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG rendering library."
repository = "https://github.com/RazrFalcon/resvg"
exclude = ["tests"]
build = "build.rs"

[workspace]
members = ["c-api", "svgfilters", "usvg"]

[[bin]]
name = "resvg"
required-features = ["filter", "text", "system-fonts", "memmap-fonts"]

[dependencies]
jpeg-decoder = { version = "0.1", default-features = false }
log = "0.4"
pico-args = "0.4"
png = "0.17"
rgb = "0.8"
svgfilters = { path = "svgfilters", version = "0.4", optional = true }
tiny-skia = { path = "../tiny-skia" }
usvg = { path = "usvg", version = "0.20.0", default-features = false }

[dev-dependencies]
once_cell = "1.5"

[features]
default = ["filter", "text", "system-fonts", "memmap-fonts"]
# enables SVG Filter support
# adds around 100KiB to your binary
filter = ["svgfilters", "usvg/filter"]
# enables SVG Text support
# adds around 500KiB to your binary
text = ["usvg/text"]
# enables system fonts loading (only for `text`)
system-fonts = ["usvg/system-fonts"]
# enables font files memmaping for faster loading (only for `text`)
memmap-fonts = ["usvg/memmap-fonts"]
# enables SVG the --dump-svg flag in CLI
# adds around 50KiB to your binary
dump-svg = ["usvg/export"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "WUL.Svg.dll"
LegalCopyright = "Copyright ? 2021 Wondershare, All rights reserved."
FileDescription = "WUL Svg Library"
ProductVersion = "2.7.0"
ProductName = "WUL"